--- a/Bazaar Ghar/Base.lproj/LaunchScreen.storyboard
+++ b/Bazaar Ghar/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,17 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="QRS-vF-JR7">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homebazarimg" translatesAutoresizingMaskIntoConstraints="NO" id="gMR-oT-7O8">
+                                <rect key="frame" x="67.666666666666686" y="350" width="240" height="128"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="Gh6-92-1cO"/>
+                                    <constraint firstAttribute="height" constant="128" id="cqi-WJ-hJ4"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="FF8319"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="QRS-vF-JR7" secondAttribute="bottom" id="0Ev-4g-wQD"/>
-                            <constraint firstItem="QRS-vF-JR7" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="DGj-5Z-Yko"/>
-                            <constraint firstAttribute="trailing" secondItem="QRS-vF-JR7" secondAttribute="trailing" id="nVy-yT-rVf"/>
-                            <constraint firstItem="QRS-vF-JR7" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="pbO-J7-Psb"/>
+                            <constraint firstItem="gMR-oT-7O8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="pgu-RW-faZ"/>
+                            <constraint firstItem="gMR-oT-7O8" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="ygx-42-ZDx"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -37,9 +40,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Splash" width="366" height="742"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="homebazarimg" width="600" height="117"/>
+        <namedColor name="FF8319">
+            <color red="0.023529411764705882" green="0.71764705882352942" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
